[feat] implementing basic Category Domain

--- a/tests/FC.PixelFlix.Catalogo.UnitTests/FC.PixelFlix.Catalogo.UnitTests.csproj
+++ b/tests/FC.PixelFlix.Catalogo.UnitTests/FC.PixelFlix.Catalogo.UnitTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\FC.Pixelflix.Catalogo.Domain\FC.Pixelflix.Catalogo.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
