[feat] add CreateCategory UseCase method

--- a/tests/FC.PixelFlix.Catalogo.UnitTests/FC.PixelFlix.Catalogo.UnitTests.csproj
+++ b/tests/FC.PixelFlix.Catalogo.UnitTests/FC.PixelFlix.Catalogo.UnitTests.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\FC.Pixelflix.Catalogo.Application\FC.Pixelflix.Catalogo.Application.csproj" />
     <ProjectReference Include="..\..\src\FC.Pixelflix.Catalogo.Domain\FC.Pixelflix.Catalogo.Domain.csproj" />
   </ItemGroup>
 
