[test] GivenAValidCommand_whenCallsCreateCategory_shouldReturnACategory OK

--- a/src/FC.Pixelflix.Catalogo.Application/FC.Pixelflix.Catalogo.Application.csproj
+++ b/src/FC.Pixelflix.Catalogo.Application/FC.Pixelflix.Catalogo.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FC.Pixelflix.Catalogo.Domain\FC.Pixelflix.Catalogo.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
