--- a/tests/FC.Pixelflix.Catalogo.IntegrationTests/FC.Pixelflix.Catalogo.IntegrationTests.csproj
+++ b/tests/FC.Pixelflix.Catalogo.IntegrationTests/FC.Pixelflix.Catalogo.IntegrationTests.csproj
@@ -30,4 +30,10 @@
     <ProjectReference Include="..\..\src\FC.Pixelflix.Catalogo.Infra.Data.EF\FC.Pixelflix.Catalogo.Infra.Data.EF.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
