--- a/tests/FC.Pixelflix.Catalogo.e2e/FC.Pixelflix.Catalogo.e2e.csproj
+++ b/tests/FC.Pixelflix.Catalogo.e2e/FC.Pixelflix.Catalogo.e2e.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Bogus" Version="35.5.1" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
         <PackageReference Include="xunit" Version="2.4.2"/>
