--- a/src/FC.Pixelflix.Catalogo.Api/FC.Pixelflix.Catalogo.Api.csproj
+++ b/src/FC.Pixelflix.Catalogo.Api/FC.Pixelflix.Catalogo.Api.csproj
@@ -11,8 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.3.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FC.Pixelflix.Catalogo.Application\FC.Pixelflix.Catalogo.Application.csproj" />
+    <ProjectReference Include="..\FC.Pixelflix.Catalogo.Infra.Data.EF\FC.Pixelflix.Catalogo.Infra.Data.EF.csproj" />
   </ItemGroup>
 
 </Project>
