--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     hostname: catalog-db
     image: mysql
     ports:
-      - "3306:3306"
+      - 3307:3307
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: catalog
-      MYSQL_USER: catalog
-      MYSQL_PASSWORD: catalog
+      MYSQL_TCP_PORT: 3307
