--- a/src/FC.Pixelflix.Catalogo.Api/FC.Pixelflix.Catalogo.Api.csproj
+++ b/src/FC.Pixelflix.Catalogo.Api/FC.Pixelflix.Catalogo.Api.csproj
@@ -16,6 +16,7 @@
     
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
