--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - 3307:3307
     environment:
+      MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: root
       MYSQL_TCP_PORT: 3307
     networks: 
@@ -15,5 +16,5 @@ services:
 
 networks:
   default:
-      name: service_catalog
-      external: true
+    name: service_catalog
+    external: true
