--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -10,9 +10,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_TCP_PORT: 3307
-    networks: 
-      - service_catalog
 
 networks:
-  service_catalog:
-    driver: bridge
+  default:
+    name: service_catalog
+    external: true
