--- a/src/FC.Pixelflix.Catalogo.Api/FC.Pixelflix.Catalogo.Api.csproj
+++ b/src/FC.Pixelflix.Catalogo.Api/FC.Pixelflix.Catalogo.Api.csproj
@@ -11,6 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NovaPasta1\**" />
+    <Content Remove="NovaPasta1\**" />
+    <EmbeddedResource Remove="NovaPasta1\**" />
+    <None Remove="NovaPasta1\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     
     <PackageReference Include="MediatR" Version="12.3.0" />
     
@@ -28,6 +35,10 @@
   <ItemGroup>
     <ProjectReference Include="..\FC.Pixelflix.Catalogo.Application\FC.Pixelflix.Catalogo.Application.csproj" />
     <ProjectReference Include="..\FC.Pixelflix.Catalogo.Infra.Data.EF\FC.Pixelflix.Catalogo.Infra.Data.EF.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NovaPasta\" />
   </ItemGroup>
 
 </Project>
