--- a/src/FC.Pixelflix.Catalogo.Application/FC.Pixelflix.Catalogo.Application.csproj
+++ b/src/FC.Pixelflix.Catalogo.Application/FC.Pixelflix.Catalogo.Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\FC.Pixelflix.Catalogo.Domain\FC.Pixelflix.Catalogo.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\Genre\CreateGenre\" />
+  </ItemGroup>
+
 </Project>
